Jann 30/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>A_D_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A&amp;D Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Research_Footnotes_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting Research Footnotes/Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Research__c</fullName>
        <label>Accounting Research</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Sourced_To__c</fullName>
        <label>Action/Sourced To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Impairment_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Impairment Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Performance_Assessment_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Performance Assessment Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anti_trust_and_Resolution_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti-trust and Resolution Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_of_Gov_t_Public_Relations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment of Gov&apos;t &amp; Public Relations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorization_to_Investigate_ATI_A_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorization to Investigate (ATI/A&amp;D)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Pending_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Pending Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Development_Dept_File__c</fullName>
        <label>Business Development Dept. File #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASEAN  Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central &amp; Southern Europe Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central, East &amp; West Africa (CEWA) Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China &amp; Korea Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iberia Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India &amp; Southwest Asia Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin Center Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East &amp; North Africa (MENA) Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest Europe &amp; Nordics Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia, Ukraine &amp; Belarus Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Central Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Latin Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Pacific Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey, Caucasus &amp; Central Asia Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA Business Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Transaction_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Transaction Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiality Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidentiality Agreement(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Referral_Name__c</fullName>
        <label>Contact/Referral Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_1__c</fullName>
        <label>Country A-L</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua &amp; Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Virgin Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country_2__c</fullName>
        <label>Country M-Z</label>
        <picklist>
            <picklistValues>
                <fullName>Macau (Macao)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malawi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maldives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martinique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mayotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moldova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montenegro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montserrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Myanmar (Burma)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namibia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nauru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nepal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Caledonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigeria</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>CRS_Country__c</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Functional__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>ARE_RFA__c</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Status_Date__c</fullName>
        <label>Current Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_AutoNumber__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Deal AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deal_Category__c</fullName>
        <label>Deal Structure</label>
        <picklist>
            <controllingField>Type_of_Deal__c</controllingField>
            <picklistValues>
                <fullName>Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divestiture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority/Equity Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Description_Objectives__c</fullName>
        <label>Deal Description &amp; Objectives</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Number__c</fullName>
        <formula>CASE(Group__c,
 &quot;Africa&quot;, &quot;AFR&quot;, 
&quot;Eurasia&quot;, &quot;EAG&quot;,
&quot;Europe&quot;, &quot;EUR&quot;,
&quot;Global Initiative&quot;, &quot;GLB&quot;,
&quot;Latin America&quot;, &quot;LAG&quot;,
&quot;North America&quot;, &quot;NAG&quot;,
&quot;Pacific&quot;, &quot;PAC&quot;,
&quot;Asia Pacific&quot;, &quot;PAC&quot;,
&quot;Corporate/Other&quot;, &quot;COR&quot;,
&quot;R&amp;D/Technical&quot;, &quot;R&amp;D&quot;,
&quot;&quot;)+Deal_AutoNumber__c + Text(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Statistics_Date__c</fullName>
        <label>Deal Statistics Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Structure__c</fullName>
        <label>Deal Category</label>
        <picklist>
            <controllingField>Type_of_Deal__c</controllingField>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparkling/SSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Deal_Team_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Team Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Definitive_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Definitive Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Security__c</fullName>
        <label>Document Security</label>
        <picklist>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highly Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Request_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Request List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBITDA_Multiple_LC__c</fullName>
        <label>EBITDA Multiple LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA_Multiple__c</fullName>
        <label>EBITDA Multiple USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EBITDA_Other_Currency_Dollor__c</fullName>
        <label>EBITDA LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBITDA_USD__c</fullName>
        <label>EBITDA USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Engagement_Letters_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engagement Letters/SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Other_Currency_Dollor__c</fullName>
        <label>Enterprise LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enterprise_USD__c</fullName>
        <label>Enterprise USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Other_Currency_Dollor__c</fullName>
        <label>Estimated\Preliminary LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_USD__c</fullName>
        <label>Estimated\Preliminary USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Proceeds_Other_Currency_Dollor__c</fullName>
        <label>Final Proceeds LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Proceeds_USD__c</fullName>
        <label>Final Proceeds USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Deal_Provision__c</fullName>
        <label>Future Deal Provision</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Government_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eurasia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D/Technical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Information_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KO_External_Counsel__c</fullName>
        <label>KO External Counsel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_Investment_Bank__c</fullName>
        <label>KO Investment Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_Legal__c</fullName>
        <label>KO Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KO_Tax__c</fullName>
        <label>KO Tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Deal__c</fullName>
        <label>Legacy_Deal_#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_of_Engagement_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Engagement &amp; SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operating_Income_Other_Currency_Dollor__c</fullName>
        <label>Operating Income LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Income_USD__c</fullName>
        <label>Operating Income USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organizational_Structure__c</fullName>
        <label>Organizational Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coca-Cola International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coca-Cola North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottling Investment Group</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Deals_Other_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Associates__c</fullName>
        <label>Other Associates</label>
        <picklist>
            <picklistValues>
                <fullName>Whitney Hagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Westfall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judith Speas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephanie Sparkmon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandra Harvey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michelle Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne K. &apos;CCNA&apos; Taylor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Sisk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloris Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shellie Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alok Deo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Hyldebrandt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy J. Mari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jorge Perez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penny Mayo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebecca Buehler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reem Al-Hakim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marvin Jimenez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Kahn-Aitken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luciana Descio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Javier Drucker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marie Quintero-Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>William W. Harkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Leveridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vincent Gioe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Taylor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andriy Avramenko</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PR_Communication_Press_Releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR/Communication/Press Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Transaction_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Transaction Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <defaultValue>$User.FirstName + &apos; &apos; + $User.LastName</defaultValue>
        <label>Project Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <label>Project Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Other_Currency_Dollor__c</fullName>
        <label>Purchase Price LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_USD__c</fullName>
        <label>Purchase Price USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFA_Valuation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFA &amp; Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFA_for_3rd_Party_Due_Diligence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFA for 3rd Party Due Diligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFA_for_3rd_Party_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFA for 3rd Party Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Result__c</fullName>
        <label>Response/Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Multiple_Other_Currency_Dollor__c</fullName>
        <label>Revenue Multiple LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Multiple_USD__c</fullName>
        <label>Revenue Multiple USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Other_Currency_Dollor__c</fullName>
        <label>Revenue LC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_USD__c</fullName>
        <label>Revenue USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source_of_Referral__c</fullName>
        <label>Source of Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>